upldate some configs.

--- a/env/jenkins.env
+++ b/env/jenkins.env
@@ -1,4 +1,4 @@
-JENKINS_BASE_URL=http://172.17.26.238:8080/
+JENKINS_BASE_URL=http://localhost:8080/
 
 JENKINS_ADMIN_PASSWORD=Paass!@
 JENKINS_ADMIN_EMAIL=test@example.com
@@ -7,7 +7,7 @@ JENKINS_MASTER_EXECUTORS=4
 JENKINS_SLAVE_AGENT_PORT=50000
 
 SMTP_CHARSET=text/html
-SMTP_HOST=eposta.csb.gov.tr
+SMTP_HOST=email.example.com
 SMTP_PORT=25
 
 EMAILEXT_EMAILSUFFIX=@example.com
