added job and folder project upgraded jenkins version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     privileged: true
     volumes:
      - /var/run/docker.sock:/var/run/docker.sock
-     - /jenkins-data:/var/jenkins_home
+     - $PWD/jenkins-data:/var/jenkins_home
     ports:
      - "8080:8080"
      - "50000:50000"
-    network_mode: "host" 
