--- a/env/jenkins.env
+++ b/env/jenkins.env
@@ -1,6 +1,6 @@
 JENKINS_BASE_URL=http://localhost:8080/
 
-JENKINS_ADMIN_PASSWORD=Paass!@
+JENKINS_ADMIN_PASSWORD=admin
 JENKINS_ADMIN_EMAIL=test@example.com
 
 JENKINS_MASTER_EXECUTORS=4
